<resources>
    <string name="app_name">ALPR Launcher</string>
    <string name="target_database">Target Database</string>
    <string name="use_test_data_base">Use test database..</string>
    <string name="select_from_device_storage">Select from device storage..</string>
    <string name="select_table">Select Table</string>
    <string name="database_file_and_uri_can_t_be_null">Database file and URI can\'t be null.</string>
    <string name="target_table_can_t_be_null_or_empty">Target table can\'t be null or empty.</string>
    <string name="cancelled_by_user">Cancelled by user.</string>
    <string name="error_with_message">Error: %1$s</string>
    <string name="camera_type">Camera Type</string>
    <string name="hotlist_source_type">Hotlist Source Type</string>
    <string name="response_type">Response Type</string>
    <string name="response_mode">Response Mode</string>
    <string name="response_and_logs">Response and Logs</string>
    <string name="launch_scanner">Launch Scanner</string>
</resources>