<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target_database"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropdown_database"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:focusable="true"
                android:inputType="none"
                android:textSize="14sp"
                tools:text="sdcard/..." />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_table"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropdown_add_tables"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:focusable="true"
                android:inputType="none"
                android:textSize="14sp"
                tools:text="tables..." />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hotlist_source_type">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/dropdown_hotlist_source_type"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginEnd="1dp"
                    android:backgroundTint="@android:color/transparent"
                    android:focusable="true"
                    android:inputType="none"
                    android:textSize="15sp"
                    tools:text="PASSED_ONLY" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/camera_type">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/dropdown_camera_type"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@android:color/transparent"
                    android:focusable="true"
                    android:inputType="none"
                    android:textSize="15sp"
                    tools:text="Device Scanner" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:hint="@string/response_type">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/dropdown_response_type"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@android:color/transparent"
                    android:focusable="true"
                    android:inputType="none"
                    android:textSize="15sp"
                    tools:text="Only Alerts" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:hint="@string/response_mode">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/dropdown_response_mode"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:backgroundTint="@android:color/transparent"
                    android:focusable="true"
                    android:inputType="none"
                    android:textSize="15sp"
                    tools:text="SINGLE" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:text="@string/response_and_logs"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/sv_logs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_logs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:gravity="bottom"
                android:lineSpacingExtra="3dp"
                android:padding="8dp"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </ScrollView>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|end"
            android:layout_margin="18dp"
            android:text="@string/launch_scanner" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>

